--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@portabletext/react": "^6.0.0",
     "@sanity/image-url": "^1.2.0",
     "@sanity/vision": "^4.22.0",
+    "@vercel/analytics": "^1.6.1",
     "lucide-react": "^0.562.0",
     "next": "16.1.0",
     "next-sanity": "^11.6.12",
